[FIX] Invisible scrollbar (Palenight themes)

--- a/Community Material Theme Palenight High Contrast/userchrome.css
+++ b/Community Material Theme Palenight High Contrast/userchrome.css
@@ -20,7 +20,7 @@
   --darkest: #1f2230;
   --darkest-alt: #1B1E2B;
   --darker: #292D3E;
-  --dark: #292E3F;
+  --dark: #353c52;
   --light: #A6ACCD;
   --lighter-grey: #E9EAF1;
   --light-grey: #C4C6D4;
