--- a/Community Material Theme Palenight/userstyle.css
+++ b/Community Material Theme Palenight/userstyle.css
@@ -19,7 +19,7 @@
 
   --darkest: #1f2230;
   --darker: #292D3E;
-  --dark: #292E3F;
+  --dark: #353c52;
   --light: #A6ACCD;
   --lighter-grey: #E9EAF1;
   --light-grey: #C4C6D4;
